tests/typec-test/test_out/spec-with-funcs.txt
error: colliding implementations for type 'uint'
  --> spec-with-funcs\root.ctl:9:1
   |
 9 | / impl Glue for uint {
10 | |     fn new -> Self => 0
11 | |     fn [T] use_on(s: ^Self, value: T) -> Glued\[T] => \{ inner: value }
12 | | }
   | |_- info: implementation that already satisfies
13 |   impl Glue for uint
   |   ^^^^^^^^^^^^^^^^^^ it is colliding with this implementation
   |
   = info: 'uint' already implements 'Glue'

error: implementation is missing functions
  --> spec-with-funcs\root.ctl:13:1
   |
13 | impl Glue for uint
   | ^^^^^^^^^^^^^^^^^^ here
   |
   = help: missing: new, use_on

error: implementation is missing functions
  --> spec-with-funcs\root.ctl:14:1
   |
14 | impl Glue for u32
   | ^^^^^^^^^^^^^^^^^ here
   |
   = help: missing: new, use_on

error: dataflow of impl method does not match spec
  --> spec-with-funcs\root.ctl:5:6
   |
 5 | spec Glue {
   |      ---- info: spec is defined here
 6 |     fn new -> Self
   |        --- info: this function has different dataflow
 7 |     fn [T] use_on(s: ^Self, value: T) -> Glued\[T]
 8 | }
 9 | impl Glue for uint {
10 |     fn new -> Self => 0
11 |     fn [T] use_on(s: ^Self, value: T) -> Glued\[T] => \{ inner: value }
12 | }
13 | impl Glue for uint
14 | impl Glue for u32
15 | struct A
16 | impl Glue for A {
17 |     fn new -> uint => 0
   |     ^^^^^^^^^^^^^^^^^^^ here
   |
   = info: found mismatches:
           ret 0\A

error: amount of arguments of impl method does not match spec
  --> spec-with-funcs\root.ctl:5:6
   |
 5 | spec Glue {
   |      ---- info: spec is defined here
 6 |     fn new -> Self
 7 |     fn [T] use_on(s: ^Self, value: T) -> Glued\[T]
   |            ------ info: this function takes 2 arguments
 8 | }
 9 | impl Glue for uint {
10 |     fn new -> Self => 0
11 |     fn [T] use_on(s: ^Self, value: T) -> Glued\[T] => \{ inner: value }
12 | }
13 | impl Glue for uint
14 | impl Glue for u32
15 | struct A
16 | impl Glue for A {
17 |     fn new -> uint => 0
18 |     fn [T] use_on(s: ^uint) -> Glued\[T] => \{ inner: value }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl method takes 1 arguments
   |
   = info: expected 2 but got 1

error: implementation is missing functions
  --> spec-with-funcs\root.ctl:16:1
   |
16 | / impl Glue for A {
17 | |     fn new -> uint => 0
18 | |     fn [T] use_on(s: ^uint) -> Glued\[T] => \{ inner: value }
19 | | }
   | |_^ here
   |
   = help: missing: new, use_on

error: not all call parameters can be inferred
  --> spec-with-funcs\root.ctl:34:37
   |
34 | fn main -> uint => uint\new() + take(0)
   |                                     ^^^ here
   |
   = info: missing parameters: #1
   = help: provide the parameters (works on methods too) (<func_path>\[<ty_param>, ...](<expr_arg>, ...))

error: scope item not found
  --> spec-with-funcs\root.ctl:18:55
   |
18 |     fn [T] use_on(s: ^uint) -> Glued\[T] => \{ inner: value }
   |                                                       ^^^^^ this does not exist or is not imported
   |
   = help: expected variable or enum
   = info: debug: queried 'value'

error: missing fields in struct constructor
  --> spec-with-funcs\root.ctl:18:45
   |
18 |     fn [T] use_on(s: ^uint) -> Glued\[T] => \{ inner: value }
   |                                             ^^^^^^^^^^^^^^^^^ here
   |
   = error: missing: inner

info: tir repr of functions:
fn [: Glue, ] glue_up(var0: param1) -> 0\Glued[param1] return {
    Glue\use_on[param0, param1](^Glue\new[param0](), var0)
}

fn [, : GenericSpec[param0]] take(var0: param0) -> param1 return GenericSpec\take[param0, param1](var0)

fn [] new() -> uint return 0

fn [] use_on(var0: ^uint, var1: param0) -> 0\Glued[param0] return 0\Glued[param0]\{var1}

fn [] new() -> uint return 0

fn [] new() -> () return {
}

fn [] take(var0: uint) -> uint return var0



